--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon"
   },
   "author": "Luke Brakel",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
